# scentesia_audio

./: .replit  CONFIGURAR_API_URL.md  DEPLOY_RENDER.md  DEPLOY_STREAMLIT_CLOUD.md  README_DEPLOY.md  STREAMLIT_CLOUD_SETUP.md  api.py  app.py  app_only.py  backend.py  main.py  main_simple.py  packages.txt  pyproject.toml  render.yaml  replit.md  requirements.txt  requirements_clean.txt  streamlit_secrets.toml  test_frequencies.xlsx  utils.py
.streamlit/: config.toml  config_cloud.toml
attached_assets/: logs-jenifergoncalvesdasilvadev-neuro_audio_generator-main-app.py-2025-06-20T00_52_20.354Z_1750380819554.txt  logs-jenifergoncalvesdasilvadev-scentesia_audio-replit-agent-app.py-2025-06-20T01_23_28.929Z_1750382711557.txt
