[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "fpdf2>=2.8.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "uvicorn[standard]>=0.34.3",
    "xlrd>=2.0.2",
]
